--- a/05-lifecycle_of_a_Patch.Rmd
+++ b/05-lifecycle_of_a_Patch.Rmd
@@ -2,7 +2,7 @@
 
 ## Introduction
 
-R uses a workflow based on patches. What this means is that you can create a patch and submit it through your official Bugzilla account to the core developer(s) and/ or package maintainer(s).
+R uses a workflow based on patches. What this means is that you can create a patch and submit it through your official Bugzilla account to the core developer(s) and/ or package maintainer(s). Be clear in your communication as it is the key to contributing to any project, especially an open source project like R.
 
 ## When do you submit a patch?
 
@@ -22,13 +22,23 @@ To submit a patch, you need:
 
 Refer to the guidelines given [here](https://www.r-project.org/bugs.html#how-to-submit-patches) for the process to submit a patch in R.
 
-## Step-by-step Guide {#GitBranch}
+## Making good patches {#GoodPatches} 
 
-### Resolving Merge Confilcts
+When creating a patch for submission, there are several things that you can do to help ensure that your patch is accepted:
 
-## Making Good PRs 
+1. Make sure to follow [R's style guidelines](). The coding style of the patch you submit should largely match with the codebase it is being applied to. If your patch has one or two minor discrepancies, then those may be fixed by the core developer who will eventually test your patch. However if there are systematic deviations from the style guides your patch will be put on hold until you fix the formatting issues.
 
-## Making Good Commits
+2. Be aware of backwards-compatibility considerations. While the core developer who eventually handles your patch will make the final call on whether something is acceptable, thiking about backwards-compatibility early will help prevent having your patch rejected on these grounds. Put yourself in the shoes of someone whose code will be broken by the change(s) introduced by the patch. It is quite likely that any change made will break someone's code, so you need to have a good reason to make a change as you will be forcing someone to update their code. This obviously does not apply to new functions or new arguments. NEw arguments should be optional and have default values which maintain the existing behaviour. If in doubt, [discuss](link to the chapter on where to ask for help) the issue with experienced developers.
+
+3. Make sure you have proper tests to verify that your patch works as expected. Patches may not be accepted without the proper tests.
+
+4. Make sure the entire test suite runs without failure because of your changes. It is not sufficient to only run whichever test seems impacted by your changes, because there might be interferences unknown to you between your changes and some other part of the interpreter.
+
+5. Proper documentation additions/changes should be included.
+
+6. Fixes for typos and grammar errors in documents are welcome. Submit those whenever you come across them.
+
+7. Each bugfix should ideally be addressed by a single patch. In particular, do not fix more than one issue in the same patch (except, if one code change fixes all of them) and do not do cosmetic changes to unrelated code in the same patch as some bugfix.
 
 ## Licensing
 
@@ -60,7 +70,7 @@ If a bug report or an issue has a patch attached that has not been reviewed, you
 
 4. Includes proper documentation changes.
 
-Doing all of this allows the core developer(s) and/ or maintainer(s) to more quickly look for subtle issues that only people with extensive experience working on R's codebase will notice.
+Also refer to [Making good patches](#GoodPatches) for more ideas. Doing all of this allows the core developer(s) and/ or maintainer(s) to more quickly look for subtle issues that only people with extensive experience working on R's codebase will notice.
 
 ## share examples of patch reports on Bugzilla+?
 
