--- a/05-lifecycle_of_a_Patch.Rmd
+++ b/05-lifecycle_of_a_Patch.Rmd
@@ -26,7 +26,7 @@ Refer to the guidelines given [here](https://www.r-project.org/bugs.html#how-to-
 
 When creating a patch for submission, there are several things that you can do to help ensure that your patch is accepted:
 
-1. Make sure to follow [R's style guidelines](). The coding style of the patch you submit should largely match with the codebase it is being applied to. If your patch has one or two minor discrepancies, then those may be fixed by the core developer who will eventually test your patch. However if there are systematic deviations from the style guides your patch will be put on hold until you fix the formatting issues.
+1. Make sure to follow [R's coding standards](https://cran.r-project.org/doc/manuals/r-release/R-ints.html#R-coding-standards) (R is a GNU project and there are GNU coding standards). The coding style of the patch you submit should largely match with the codebase it is being applied to. If your patch has one or two minor discrepancies, then those may be fixed by the core developer who will eventually test your patch. However if there are systematic deviations from the style guides your patch will be put on hold until you fix the formatting issues. There is no comprehensive official R style manual, however some nearly universal standards are summarised in [this article](https://cran.r-project.org/web/packages/rockchalk/vignettes/Rstyle.pdf).
 
 2. Be aware of backwards-compatibility considerations. While the core developer who eventually handles your patch will make the final call on whether something is acceptable, thiking about backwards-compatibility early will help prevent having your patch rejected on these grounds. Put yourself in the shoes of someone whose code will be broken by the change(s) introduced by the patch. It is quite likely that any change made will break someone's code, so you need to have a good reason to make a change as you will be forcing someone to update their code. This obviously does not apply to new functions or new arguments. NEw arguments should be optional and have default values which maintain the existing behaviour. If in doubt, [discuss](link to the chapter on where to ask for help) the issue with experienced developers.
 
@@ -40,45 +40,63 @@ When creating a patch for submission, there are several things that you can do t
 
 7. Each bugfix should ideally be addressed by a single patch. In particular, do not fix more than one issue in the same patch (except, if one code change fixes all of them) and do not do cosmetic changes to unrelated code in the same patch as some bugfix.
 
-## Licensing
+8. Include (mostly as the first sentence), a to-the-point explanation of what the purpose of the patch is. This sentence should not be in the descriptive form, rather an imperative form will be more suitable here. If this is not enough detail for a patch, a new paragraphs(s) can be added to explain in proper depth what has happened. The details should be good enough that a core developer reading it understands the justificationfor the change.
 
-## Submitting
+9. If your patch is in response to a pre-existing issue or bug report on Bugzilla, then please make sure to reference the bug number using `Bug-NNNNN` in the patch title or message or comment.
 
-## Converting an Existing Patch
-
+10. If the patch is for an unreported issue or bug (assuming you already performed a search on Bugzilla for a pre-existing issue or bug), create a new bug report and include your patch with it. Please fill in as much relevant detail as possible to prevent reviewers from having to delay reviewing your patch because of lack of information.
+ 
 ## Reviewing
 
-### How to Review a Pull Request
+To begin with, please be patient! There are many more people submitting patches than there are people capable of reviewing your patches. Getting your patch reviewed requires a reviewer to have the spare time and motivation to look at your patch. We cannot force anyone to review patches and no one is employed to look at patches. 
 
-## Leaving a Pull Request Review
+There is a `#patches-for-review` channel on the [R-devel slack](https://r-devel.slack.com/) where you can share your patch(es) for review/feedback before submitting to R-Core/Bugzilla. This can help with checking that you have included the important information and excluded redundant information.
 
-## Committing/Rejecting
+If your patch has not received any notice from reviewers (i.e., no comment made) after one month, comment/message on the `#patches-for-review` channel to remind the members that the patch needs a review.
 
-## Crediting
+When someone does manage to find the time to look at your patch they will most likely make comments about how it can be improved. It is then expected that you update your patch to address these comments, and the review process will thus iterate until a satisfactory solution has emerged.
 
-## Details
+### How to review a patch?
 
-## Reviewing patches
+One of the bottlenecks in the R development process is the lack of code reviews. If you browse Bugzilla, you will see that numerous issues have a fix, but cannot be merged into the main source code repository, because no one has reviewed the proposed solution. Reviewing a patch can be just as informative as providing a patch and it will allow you to give constructive comments on another developer’s work. This guide provides a checklist for submitting a patch review. It is a common misconception that in order to be useful, a patch review has to be perfect. This is not the case at all! It is helpful to just test the patch and/or play around with the code and leave comments in the patch or on Bugzilla.
 
 If a bug report or an issue has a patch attached that has not been reviewed, you can help by making sure that the patch:
 
-1. Follows the style guides.
+1. follows the style guides.
 
-2. Is a good solution to the problem it is trying to solve.
+2. is a good solution to the problem it is trying to solve.
 
-3. Includes proper tests.
+3. includes proper tests.
 
-4. Includes proper documentation changes.
+4. includes proper documentation changes.
+
+5. is reproducible on following the stated steps. If not then, you may comment which step is not reproducible on the version of R that you are using.
 
 Also refer to [Making good patches](#GoodPatches) for more ideas. Doing all of this allows the core developer(s) and/ or maintainer(s) to more quickly look for subtle issues that only people with extensive experience working on R's codebase will notice.
 
-## share examples of patch reports on Bugzilla+?
+## Leaving a patch review on Bugzilla
 
-## share examples where people have acted as reviewers for patches
+When you review a patch, you should provide additional details and context of your review process and leave comments. For example:
 
-**Note**:
+1. If you tested the patch, report the result and the system and version tested on, such as 'Windows 10', 'Ubuntu 16.4', or 'Mac High Sierra'.
 
-There is a `#patches-for-review` channel on the [R-devel slack](https://r-devel.slack.com/) where you can share your patch(es) for review/feedback before submitting to R-Core/Bugzilla. This can help with checking that you have included the important information and excluded redundant information.
+2. If you request changes, try to suggest how.
+
+3. Comment on what is 'good' about the patch, not just the 'bad'. Doing so will make it easier for the patch author to find the good in your comments.
+
+## Dismissing review from another core developer
+
+A core developer can dismiss another core developer’s review if they confirmed that the requested changes have been made. When a core developer has assigned the patch to themselves, then it is a sign that they are actively looking after the patch, and their review should not be dismissed.
+
+## Committing/Rejecting
+
+Once your patch has reached an acceptable state (and thus considered 'accepted'), it will either be applied or rejected. If it is rejected, please do not take it personally! Your work is still appreciated regardless of whether your patch is applied. Balancing what does and does not go into R is tricky and everyone's contributions cannot always be accepted.
+
+But if your patch is accepted and applied it will then go on to be released with the next patched release and eventually the next major release of R. It may also be backported to older versions of R as a bugfix if the core developer doing the patch acceptance believes it is warranted.
+
+## Examples of patch reports on Bugzilla
+
+## Examples of reviewing a patch
 
 ## See also
 
