--- a/05-lifecycle_of_a_Patch.Rmd
+++ b/05-lifecycle_of_a_Patch.Rmd
@@ -2,7 +2,7 @@
 
 ## Introduction
 
-R uses a workflow based on patches. What this means is that you can create a patch and submit it through your official Bugzilla account to the core developer(s) and/ or package maintainer(s). Be clear in your communication as it is the key to contributing to any project, especially an open source project like R.
+R uses a workflow based on patches. A patch is the set of differences (additions and deletions) between two versions of code. So you can create a patch defining a bug fix or a proposed update to the R codebase and submit it through your official Bugzilla account to the core developer(s). Be clear in your communication as it is the key to contributing to any project, especially an open source project like R.
 
 ## When do you submit a patch?
 
@@ -18,9 +18,9 @@ To submit a patch, you need:
 
 2. The latest developer version of R.
 
-## How to submit a patch?
+## How to prepare a patch?
 
-Refer to the guidelines given [here](https://www.r-project.org/bugs.html#how-to-submit-patches) for the process to submit a patch in R.
+Refer to the guidelines given [here](https://www.r-project.org/bugs.html#how-to-submit-patches) for the process to prepare a patch against R-devel.
 
 ## Making good patches {#GoodPatches} 
 
@@ -28,13 +28,11 @@ When creating a patch for submission, there are several things that you can do t
 
 1. Make sure to follow [R's coding standards](https://cran.r-project.org/doc/manuals/r-release/R-ints.html#R-coding-standards) (R is a GNU project and there are GNU coding standards). The coding style of the patch you submit should largely match with the codebase it is being applied to. If your patch has one or two minor discrepancies, then those may be fixed by the core developer who will eventually test your patch. However, if there are systematic deviations from the style guides your patch will be put on hold until you fix the formatting issues. There is no comprehensive official R style manual, however some nearly universal standards are summarised in [this article](https://cran.r-project.org/web/packages/rockchalk/vignettes/Rstyle.pdf).
 
-
 2. Be aware of backwards-compatibility considerations. While the core developer who eventually handles your patch will make the final call on whether something is acceptable, thinking about backwards-compatibility early will help prevent having your patch rejected on these grounds. Put yourself in the shoes of someone whose code will be broken by the change(s) introduced by the patch. It is quite likely that any change made will break someone's code, so you need to have a good reason to make a change as you will be forcing someone to update their code. This obviously does not apply to new functions or new arguments. New arguments should be optional and have default values which maintain the existing behaviour. If in doubt, [discuss](link to the chapter on where to ask for help) the issue with experienced developers.
-
 
 3. Make sure you have proper tests to verify that your patch works as expected. Patches may not be accepted without the proper tests.
 
-4. Make sure the entire test suite runs without failure because of your changes. It is not sufficient to only run whichever test seems impacted by your changes, because there might be interferences unknown to you between your changes and some other part of the interpreter.
+4. Make sure the entire test suite runs without failure because of your changes. It is not sufficient to only run whichever test seems impacted by your changes, because there might be interactions unknown to you between your changes and some other part of the interpreter.
 
 5. Proper documentation additions/changes should be included.
 
@@ -82,7 +80,7 @@ When you review a patch, you should provide additional details and context of yo
 
 1. If you tested the patch, report the result and the system and version tested on, such as 'Windows 10', 'Ubuntu 16.4', or 'Mac High Sierra'.
 
-2. If you request changes, try to suggest how.
+2. If you request changes, try to suggest how or attach an updated patch.
 
 3. Comment on what is 'good' about the patch, not just the 'bad'. Doing so will make it easier for the patch author to find the good in your comments.
 
