--- a/06-documenting_R.Rmd
+++ b/06-documenting_R.Rmd
@@ -18,11 +18,11 @@ Following are the suggested guidelines while creating the system help files in t
 
 There are three main parts of an .Rd file:
 
-1. Header: This part is for the basic information of the document/file. For instance, the name of the file, the topics documented, a title, a short textual description, and R usage information for the objects documented.
+1. **Header**: This part is for the basic information of the document/file. For instance, the name of the file, the topics documented, a title, a short textual description, and R usage information for the objects documented.
 
-2. Body: This part includes further information on the function's arguments and return value.
+2. **Body**: This part includes further information on the function's arguments and return value.
 
-3. Footer: This part is optional. Usually the keyword information is included here.
+3. **Footer**: This part is optional. Usually the keyword information is included here.
 
 All the above information is included in a .Rd file within a series of sections with standard nmes (user-defined sections are also allowed). These sections are discussed below:
 
@@ -77,18 +77,34 @@ Extensive details of writing R documentation files can be found [here](https://c
 
 ### Starting a new translation
 
-# Helping with documentation
-
-## R-Core documentation
-
 ## Helping with documentation
+
+Maintaining the accuracy  of R's documentations and keeping a high level of quality takes a lot of effort. Community members, like you, help with writing, editing, and updating content, and these contributions are appreciated and welcomed.
+
+Looking at pre-existing documentation source files can be very helpful when getting started.
+
+If you look at documentation issues on Bugzilla, you will find various documentation problems that may need work. Issues vary from typos to unclear documentation and items lacking documentation.
+
+If you see a documentation issue that you would like to tackle, you can leave a comment on the issue saying you are going to try to solve the issue and mention roughly how long you think you will take to do so (this allows others to take on the issue if you happen to forget or lose interest).
 
 ## Proofreading
 
+While an issue filed on Bugzilla means there is a known issue somewhere, that does not mean there are not other issues lurking about in the documentation. Proofreading a part of the documentation can often uncover problems.
+
+If you decide to proofread, read a section of the documentation from start to finish, filing issues in Bugzilla for each major type of problem you find. It is best to avoid filing a single issue for an entire section containing multiple problems; instead, file several issues so that it is easier to break the work up for multiple people and more efficient review.
+
 ## Helping with the Developer's Guide
 
-## Developer's Guide workflow
+The Developer’s Guide (what you are reading now) uses the same process as the main R documentation, except for some small differences. The source lives in a [GitHub repository](https://github.com/forwards/rdevguide) and bug reports should be submitted to the [devguide GitHub tracker](https://github.com/forwards/rdevguide/issues).
 
+Our dev guide workflow uses continuous integration and deployment so changes to the dev guide are normally published when the pull request is merged. (Link to how-to-contribute from the introduction chapter)
 
+## Instructions for reporting the CRAN policy bugs -- discussion in slack (random channel)
+
+**Note**:
+
+There is a `#core-documentation` channel on the [R-devel slack](https://r-devel.slack.com/) where you can discuss about the patches for improvements to R's documentation. 
 
 ## See also
+
+1. [Writing R documentation files](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Writing-R-documentation-files)
