--- a/R_Core_Developers.Rmd
+++ b/R_Core_Developers.Rmd
@@ -28,6 +28,7 @@ This page lists the former and current members of the R Core team who have write
   * Tomas Kalibera (present)
   * Uwe Ligges (present)
 
-Affiliations of R Core team members are available [here](link to the page listing the bios most likely on the R project website--to-do). 
+Affiliations of R Core team members are available [here](). 
+<!-- TODO add URL to bios, perhaps on the R project website -->
 
 Contributors, outside the R Core team, who provided invaluable help by donating code, bug fixes, and documentation are listed [here](https://www.r-project.org/contributors.html).
